# sub-zero

./: .gitignore  CITATION.cff  README.md  authentic_bella_samples.txt  pyproject.toml
corpora/: authentic_bella_samples.jsonl  authentic_bella_samples.txt  code_probes.jsonl  code_probes.txt  corporate_stems.jsonl  corporate_stems.txt  factual_probes.jsonl  factual_probes.txt  math_probes.jsonl  math_probes.txt  multilingual_probes.jsonl  multilingual_probes.txt  neutral_stems.jsonl  neutral_stems.txt  reasoning_probes.jsonl  reasoning_probes.txt  red_team_stems.jsonl  red_team_stems.txt
docs/superpowers/specs/: 2026-04-24-sub-zero-design.md
sub_zero/: __init__.py  aletheia.py  applicator.py  atlas.py  bouncer_map.py  classifier.py  cli.py  hooks.py  instrumentation.py  model_utils.py  probe.py  propagation.py  train_integration.py
tests/: conftest.py  test_aletheia.py  test_applicator_smoke.py  test_atlas_roundtrip.py  test_hooks.py  test_integration_pipeline.py  test_probe_smoke.py
